tests/error/array_excess.gw
#! [contains] exceeds defined dimension
var int i[2];
i[0][0];
